      compression and in-core checks to improve performance of AttributeHandles.
    - AttributeArray allocation now uses the private allocate method, previous
      allocate functionality now replaced by an expand method.
    - Added support for attribute default values using Metadata in the
      Descriptor and extended the append and conversion methods.

    Improvements:
    - Introduced continuous integration through Travis, code coverage through
      Codecov, notifications through Slack.
    - Stricter compliance to compile-time warnings using various compilers.
    - Introduced simple profiling tests to the unit tests as a reference.
    - Overhaul of I/O to introduce efficient delayed-loading
      (note that this release is still Beta and not backwards-compatible).
    - Blosc compression now uses size of data type for improved compression.
    - Blosc compression enabled for all uncompressed attributes during I/O.
    - Added new typedefs to be compatible with OpenVDB 3.2 changes.

    Bug fixes:
    - New typeNameAsString specialization for uint16.
    - Introduced the TopologyCopy constructor for PointDataLeaf to match those
      provided by OpenVDB Leaf nodes [Contributed by Rick Hankins].
    - Added a missing Descriptor copy-constructor.
    - Fixed a bug in Descriptor serialization to (correctly) prevent writing
      transient attribute metadata.
    - Fixed a bug where an AttributeArray was copied on write despite being
      retrieved using a non-const getter.
    - Fixed a rare floating-point bug during point position conversion.

    API changes:
    - TypedAttributeArray::hasTypedAttribute<T>() method has been removed, this
      is now exclusively available in AttributeArray.
    - Removed PointDataAccessor which has been replaced by the simpler, more
      convenient index iteration and explicit point counting methods.

    Houdini:
    - Multi-thread the conversion from VDB Points back to Houdini points using