@@ -51,6 +51,7 @@ New features:
   allocate functionality now replaced by an expand method.
 - Added support for attribute default values using Metadata in the
   Descriptor and extended the append and conversion methods.
+- Added ability to compact attributes if all the values are the same.
 
 @par
 Improvements:
@@ -95,7 +96,7 @@ Houdini:
 - GR Primitive now draws wireframe leaf bounding boxes for out-of-core leaf
   nodes (to avoid implicit loading when using the viewport).
 - OpenVDB Points SOP no longer expands uniform values on conversion to
-  Houdini points.
+  Houdini points and automatically compacts values on conversion back.
 - Blosc compression toggle added to OpenVDB Points SOP for conversion from
   Houdini points.
 - Switched to single-replace menu for OpenVDB Points SOP to allow more
